basic auth routing

--- a/src/app/layout/components/authentication/authentication.component.html
+++ b/src/app/layout/components/authentication/authentication.component.html
@@ -1,1 +1,9 @@
-<h1>Hello Everone</h1>
+<div class="flex flex-col items-center justify-center h-screen bg-[#f2f3f3]">
+    <app-logo></app-logo>
+    <h1 class="text-3xl font-bold">Scrum Flow</h1>
+    <p class="text-[var(--default-color)] text-base">Welcome back to your agile workspace</p>
+
+    <div class="w-[90%] lg:w-[40%]">
+        <router-outlet></router-outlet>
+    </div>
+</div>
