--- a/src/app/core/auth/log-in/log-in.component.html
+++ b/src/app/core/auth/log-in/log-in.component.html
@@ -7,7 +7,7 @@
             
             <p class="text-sm font-medium flex items-center justify-center">Github</p>
         </div>
-        <div  class="google-btn border hover:bg-[#e2e8f0] transition-all duration-300 cursor-pointer border-[#e2e8f0] rounded-xl w-[45%] p-2 flex items-center justify-center gap-2 ">
+        <div (click)="onClickGoogle()"  class="google-btn border hover:bg-[#e2e8f0] transition-all duration-300 cursor-pointer border-[#e2e8f0] rounded-xl w-[45%] p-2 flex items-center justify-center gap-2 ">
             <i style="font-size: 14px;" class="pi pi-envelope" ></i>
             
             <p class="text-sm font-medium flex items-center justify-center">Google</p>
