--- a/src/app/core/auth/log-in/log-in.component.html
+++ b/src/app/core/auth/log-in/log-in.component.html
@@ -3,16 +3,9 @@
     <p class="text-sm text-gray-500 text-center mt-2">Enter your email and password to access your account</p>
     
     <!-- OAuth Buttons -->
-    <div class="flex items-center justify-around w-full mt-6">
-        <div class="google-btn border hover:bg-[#e2e8f0] transition-all duration-300 cursor-pointer border-[#e2e8f0] rounded-xl w-[45%] p-2 flex items-center justify-center gap-2">
-            <i style="font-size: 14px;" class="pi pi-github"></i>
-            <p class="text-sm font-medium flex items-center justify-center">Github</p>
-        </div>
-        <div (click)="onClickGoogle()" class="google-btn border hover:bg-[#e2e8f0] transition-all duration-300 cursor-pointer border-[#e2e8f0] rounded-xl w-[45%] p-2 flex items-center justify-center gap-2">
-            <i style="font-size: 14px;" class="pi pi-envelope"></i>
-            <p class="text-sm font-medium flex items-center justify-center">Google</p>
-        </div>
-    </div>
+     <div class="w-full">
+        <app-providers></app-providers>
+     </div>
 
     <!-- Divider -->
     <div class="flex items-center w-full mt-6">
