basic ui created for signup

--- a/src/app/layout/components/authentication/authentication.component.html
+++ b/src/app/layout/components/authentication/authentication.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col items-center justify-center h-screen bg-[#f2f3f3]">
+<div class="flex flex-col items-center justify-center min-h-screen bg-[#f2f3f3] py-10">
     <app-logo></app-logo>
     <h1 class="text-3xl font-bold">Scrum Flow</h1>
     <p class="text-[var(--default-color)] text-base">Welcome back to your agile workspace</p>
