--- a/src/app/core/auth/sign-up/sign-up.component.html
+++ b/src/app/core/auth/sign-up/sign-up.component.html
@@ -1,21 +1,38 @@
 <div class="flex flex-col items-center justify-center shad m-auto min-h-10 rounded-lg mt-10 bg-white p-6">
     <h2 class="text-2xl font-semibold">Register</h2>
     <p class="text-sm text-gray-500 text-center mt-2">Enter your email and password to access your account</p>
-    
-    <!-- OAuth Buttons -->
-     <div class="w-full">
-        <app-providers></app-providers>
-     </div>
 
-    <!-- Divider -->
+    <div class="w-full">
+        <app-providers></app-providers>
+    </div>
+
     <div class="flex items-center w-full mt-6">
         <div class="flex-1 h-px bg-gray-300"></div>
         <span class="px-3 text-sm text-gray-500">or</span>
         <div class="flex-1 h-px bg-gray-300"></div>
     </div>
-    <div>
+    <div class="w-full">
         <form [formGroup]="signupForm">
-        
+            <div class="flex flex-col">
+                <label for="username" class="text-sm font-semibold my-2">Full Name</label>
+                <input id="username" formControlName="username" placeholder="John Doe" type="text" pInputText />
+            </div>
+            <div class="flex flex-col mt-2">
+                <label for="email" class="text-sm font-semibold my-2">Email</label>
+                <input id="email" formControlName="email" placeholder="johndoe@gmail.com" type="email" pInputText />
+            </div>
+            <div formGroupName="passwordCheck">
+                <!-- <div class="flex flex-col mt-2">
+                    <label for="password" class="text-sm font-semibold my-2">Password</label>
+                    <input id="password" formControlName="password" type="password" pInputText />
+                </div>
+                <div class="flex flex-col mt-2">
+                    <label for="confirmPassword" class="text-sm font-semibold my-2">Confirm Password</label>
+                    <input id="confirmPassword" formControlName="confirmPassword" type="password" pInputText />
+                </div> -->
+                <p-button label="Create Account"
+                    [style]="{background: 'var(--primary-color)', border: 'var(--primary-color)', 'border-radius': '12px', width: '100%', 'margin-top': '12px'}" />
+            </div>
         </form>
     </div>
 
@@ -23,7 +40,7 @@
 
     <!-- Sign Up Link -->
     <p class="text-sm text-gray-500 mt-4">
-        Don't have an account? 
+        Don't have an account?
         <a routerLink="/auth/signup" class="text-blue-600 hover:text-blue-700 font-medium">Sign up</a>
     </p>
 </div>
