--- a/src/app/core/auth/sign-up/sign-up.component.html
+++ b/src/app/core/auth/sign-up/sign-up.component.html
@@ -1,6 +1,8 @@
 <div class="flex flex-col items-center justify-center shad m-auto min-h-10 rounded-lg mt-10 bg-white p-6">
     <h2 class="text-2xl font-semibold">Register</h2>
-    <p class="text-sm text-gray-500 text-center mt-2">Enter your email and password to access your account</p>
+    <p class="text-sm text-gray-500 text-center mt-2">Enter your information to get started with ScrumFlow
+
+    </p>
 
     <div class="w-full">
         <app-providers></app-providers>
@@ -91,7 +93,7 @@
 
     <!-- Sign Up Link -->
     <p class="text-sm text-gray-500 mt-4">
-        Don't have an account?
-        <a routerLink="/auth/signup" class="text-blue-600 hover:text-blue-700 font-medium">Sign up</a>
+        Already have an account?
+        <a routerLink="/auth/login" class="text-blue-600 hover:text-blue-700 font-medium">Sign in</a>
     </p>
 </div>
