working on org cards

--- a/src/app/features/organizations/organizations.component.html
+++ b/src/app/features/organizations/organizations.component.html
@@ -1,4 +1,9 @@
 <app-org-header></app-org-header>
 <div class="w-[85%] m-auto mt-10">
     <app-org-nav></app-org-nav>
+    <div class="py-10">
+        <div class="w-full h-[300px] border border-[var(--gray-default-color)] rounded-[11px]">
+
+        </div>
+    </div>
 </div>
