--- a/src/app/layout/components/home/home.component.html
+++ b/src/app/layout/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="bg-[var(--background-color)] h-screen w-screen">
+<div class="bg-[var(--background-color)] min-h-screen w-screen">
     <app-navbar></app-navbar>
     <app-organizations></app-organizations>
 </div>
