--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,7 @@
     --primary-color: #3c83f6;
     --default-color: #4b5563;
     --background-color: #020611;
+    --gray-default-color: #1d283a;
   }
 
   img {
