--- a/src/app/layout/components/navbar/navbar.component.html
+++ b/src/app/layout/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="h-16 w-full bg-[var(--background-color)] border-b border-[#1d283a] flex items-center px-6">
-    <div class="h-[60%] w-1/3 border border-[#1d283a] rounded-[11px] hover:bg-[#1d283a] transition-all duration-300 cursor-pointer">
+    <div class="h-[60%] w-1/3 border border-[var(--gray-default-color)] rounded-[11px] hover:bg-[var(--gray-default-color)] transition-all duration-300 cursor-pointer">
 
     </div>
 </div>
