--- a/src/app/features/organizations/organizations.component.html
+++ b/src/app/features/organizations/organizations.component.html
@@ -2,8 +2,35 @@
 <div class="w-[85%] m-auto mt-10">
     <app-org-nav></app-org-nav>
     <div class="py-10">
-        <div class="w-full h-[300px] border border-[var(--gray-default-color)] rounded-[11px]">
-
+        <div class="w-full lg:w-[400px] h-[300px] border border-[var(--gray-default-color)] rounded-[11px] p-6">
+            <div class="flex items-center gap-4">
+                <div class="w-12 h-12 bg-[#0F1629] rounded-full flex items-center justify-center">
+                    <p class="text-white text-base">Z</p>
+                </div>
+                <div class="flex flex-col gap-1">
+                    <div class="flex items-center gap-2">
+                        <h2 class="text-white text-base font-bold">Zynith</h2>
+                        <i class="pi pi-crown text-[#eab308]"  style="font-size: 0.7rem"></i> 
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <!-- <span
+                            class="inline-block px-2 py-0.5 bg-[#0F1629] text-white text-xs font-semibold rounded-full">
+                            member
+                        </span> -->
+                        <!-- Will change the condition afterwards -->
+                        @if (true) {
+                            <span
+                                class="inline-block px-2 py-0.5 bg-[var(--primary-color)] text-black text-xs font-semibold rounded-full">
+                                owner
+                            </span>
+                        }
+                        <span
+                            class="inline-block px-2 py-0.5 text-white text-xs font-semibold rounded-full border border-[var(--gray-default-color)]">
+                            free
+                        </span>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
