description ellipsis added

--- a/src/app/features/organizations/organizations.component.html
+++ b/src/app/features/organizations/organizations.component.html
@@ -11,6 +11,7 @@
                     <div class="flex items-center gap-2">
                         <h2 class="text-white text-base font-bold">Zynith</h2>
                         <i class="pi pi-crown text-[#eab308]"  style="font-size: 0.7rem"></i> 
+                        <!-- pi-check-circle -->
                     </div>
                     <div class="flex items-center gap-2">
                         <!-- <span
@@ -31,6 +32,9 @@
                     </div>
                 </div>
             </div>
+            <p class="text-sm multiline-ellipsis text-[#7F8DA3] mt-4">this is my organization please take a look you idiot, yes you stupid kid, you dont know how to code properly
+
+            </p>
         </div>
     </div>
 </div>
