team members count

--- a/src/app/features/organizations/organizations.component.html
+++ b/src/app/features/organizations/organizations.component.html
@@ -33,8 +33,11 @@
                 </div>
             </div>
             <p class="text-sm multiline-ellipsis text-[#7F8DA3] mt-4">this is my organization please take a look you idiot, yes you stupid kid, you dont know how to code properly
-
             </p>
+            <div class="flex items-center justify-between gap-2 mt-4">
+                <p class="text-sm text-[#7F8DA3]">Team Size</p>
+                <p class="text-sm text-white">1/10 members</p>
+            </div>
         </div>
     </div>
 </div>
