--- a/src/app/features/organizations/org-cards/org-cards.component.css
+++ b/src/app/features/organizations/org-cards/org-cards.component.css
@@ -1,7 +1,11 @@
 .multiline-ellipsis {
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-  }
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.check{
+    background-color: red !important;
+}
