--- a/src/app/features/organizations/org-cards/org-cards.component.html
+++ b/src/app/features/organizations/org-cards/org-cards.component.html
@@ -7,7 +7,7 @@
             <div class="flex flex-col gap-1">
                 <div class="flex items-center gap-2">
                     <h2 class="text-white text-base font-bold">Zynith</h2>
-                    <i class="pi pi-crown text-[#eab308]"  style="font-size: 0.7rem"></i> 
+                    <i class="pi pi-crown text-[#eab308]" style="font-size: 0.7rem"></i>
                     <!-- pi-check-circle -->
                 </div>
                 <div class="flex items-center gap-2">
@@ -17,10 +17,10 @@
                     </span> -->
                     <!-- Will change the condition afterwards -->
                     @if (true) {
-                        <span
-                            class="inline-block px-2 py-0.5 bg-[var(--primary-color)] text-black text-xs font-semibold rounded-full">
-                            owner
-                        </span>
+                    <span
+                        class="inline-block px-2 py-0.5 bg-[var(--primary-color)] text-black text-xs font-semibold rounded-full">
+                        owner
+                    </span>
                     }
                     <span
                         class="inline-block px-2 py-0.5 text-white text-xs font-semibold rounded-full border border-[var(--gray-default-color)]">
@@ -29,11 +29,14 @@
                 </div>
             </div>
         </div>
-        <p class="text-sm multiline-ellipsis text-[#7F8DA3] mt-4">this is my organization please take a look you idiot, yes you stupid kid, you dont know how to code properly
+        <p class="text-sm multiline-ellipsis text-[#7F8DA3] mt-4">this is my organization please take a look you idiot,
+            yes you stupid kid, you dont know how to code properly
         </p>
         <div class="flex items-center justify-between gap-2 mt-4">
             <p class="text-sm text-[#7F8DA3]">Team Size</p>
             <p class="text-sm text-white">1/10 members</p>
         </div>
+        <p-progressbar color="var(--primary-color)" showValue="false" [value]="10"
+            [style]="{'background-color': '#10172A', 'border-radius': '10px', 'height': '10px', 'margin-top': '10px'}" />
     </div>
 </div>
