--- a/src/app/features/organizations/org-cards/org-cards.component.html
+++ b/src/app/features/organizations/org-cards/org-cards.component.html
@@ -1,11 +1,10 @@
 <div class="py-4 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
     @for (organization of organizations; track organization.id) {
       <div class="flex flex-col justify-between w-full h-[330px] border border-[var(--gray-default-color)] rounded-[11px] p-6">
-        <!-- Top Section -->
         <div>
           <div class="flex items-center gap-4">
             <div class="w-12 h-12 bg-[#0F1629] rounded-full flex items-center justify-center">
-              <p class="text-white text-base">OC</p>
+              <p class="text-white text-base">{{organization.name | firstLetterOfWords}}</p>
             </div>
             <div class="flex flex-col flex-1">
               <div class="flex items-center gap-2">
@@ -56,7 +55,6 @@
           </div>
         </div>
   
-        <!-- Footer -->
         <div class="border-t border-[#10172A] pt-4 mt-4">
           <p class="text-xs text-[#7F8DA3]">Joined {{organization.created_at | date:'MMM yyyy'}}</p>
         </div>
